# Hindi-ASR

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: README.md
hindi_asr/: checkpoints.py  dataset.py  decoder.py  model.py  optimizer.py  trainer.py
scripts/: data_download.py  inference.py  train.py
